# giorenotsoutils

./: .dockerignore  .gitignore  .vimrc  Dockerfile.test  Makefile  README.md  compile_flags.txt  pyproject.toml
.claude/: CLAUDE.md  settings.json
lib/: help.h  version.c  version.h
src/: false.c  true.c  yes.c
tests/: conftest.py
tests/_fixtures/: giore_golden.py  harness.py
tests/false/: test_behaviour.py  test_false.py  test_perf.py
tests/true/: test_behaviour.py  test_perf.py  test_true.py
tests/yes/: test_behaviour.py  test_perf.py  test_yes.py
